# BODS-Extractor

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements-pip.txt  requirements.txt  requirements_dev.txt
examples/: scheduler-config.yml
scripts/: gtfs_database_summary.py
src/bodse/: __init__.py  __main__.py  database.py  request.py  scheduler.py  teams.py  utils.py
src/bodse/avl/: __init__.py  __main__.py  adjust.py  avl.py  database.py  delay.py  gtfs.py  raw.py
src/bodse/timetable/: GTFS_download.py  __init__.py  download.py
src/scripts/: avl_calculate_stop_times.sql  avl_previous_position.sql  gtfs_database_filter.py  gtfs_database_filter.yml  gtfs_database_summary.py
src/scripts/sql/: avl_adjust_estimates.sql  avl_average_delays.sql  avl_distances.sql  avl_gps_filter.sql  avl_largest_delays.sql  avl_overall_delay_summary.sql  count_response_positions.sql  gtfs_stop_distance.sql  update_timestamp_delay.sql
